--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -62,11 +62,11 @@
     left: 0
     z-index: 1040
 
-.modal.show .modal-dialog 
-    transform: translate(0, 0)
+// .modal.show .modal-dialog 
+//     transform: translate(0, 0)
 
-.modal .modal-dialog 
-    margin-top: 100px !important
+// .modal .modal-dialog 
+//     margin-top: 100px !important
 
 
 .modal-dialog 
@@ -953,4 +953,9 @@ table th[class*=col-]
     margin-top: 2rem
 
 .modal .modal-dialog 
-    margin-top: 75px !important
+    // margin-top: 75px !important
+    top: 15%
+    transform: translateY(-50%)
+    left: 50%
+    transform: translateX(-50%)
+    position: absolute
