--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -79,11 +79,6 @@
 .modal-header 
     -ms-flex-align: center
     -ms-flex-pack: justify
-    align-items: center
-    display: -ms-flexbox
-    display: flex
-    justify-content: space-between
-    padding: 1.25rem 1.5rem
 
 .card 
     /* Agregar sombras para crear el efecto */
@@ -164,7 +159,7 @@
 
 .punto-posi 
     width: 100%
-    margin: 0  10px 0
+    margin: 15px  10px 0
 
 .punto-posif 
     width: 100%
