--- a/src/view/classAndCourse/upload/Upload.sass
+++ b/src/view/classAndCourse/upload/Upload.sass
@@ -12,10 +12,14 @@
     button
         cursor: pointer
 
-.rellena 
-    color: #CC0000
+.mensageAction
     font-family: "Opal"
-    font-size: 15px 
+    font-size: 17px
+    &.pocitive
+        color: #52BE7F
+    &.negative
+        color:  #ff0000
+    
 .ProgressWrapper
     bottom: 0
     position: absolute
