--- a/src/view/classAndCourse/FormPostCourse.sass
+++ b/src/view/classAndCourse/FormPostCourse.sass
@@ -8,7 +8,7 @@
   display: inline-block
   width: 33.3%
   cursor: pointer
-  padding: 5px 20px
+  padding: 5px
   font-family: "Opal"
 
 .CT-opcionNivel:checked + .CT-labelNivel
@@ -26,3 +26,10 @@
 
 .CT-detallesCurso
   margin: auto 10px
+.CT-message-error
+  background: red
+  color: white
+  font-weight: 300
+  padding: 8px 5px 5px 5px
+  margin-block-start: 0.6em
+  margin-block-end: 0.3em
