--- a/src/index.css
+++ b/src/index.css
@@ -434,14 +434,14 @@ template {
 
 .modal-teacher__general-controlname{
     height: 48px;
-    width: 100%;
+    width: 95%;
     left: 80px;
     right: 364px;
     top: 28px;
-    background: rgba(126, 121, 121, 0.22);
-    border: 1px solid #FFFFFF;
-    box-sizing: border-box;
-    border-radius: 8px}
+    margin-bottom: 10px;
+    padding: 0 10px;
+    border: 1px solid #4747D5;
+    box-sizing: border-box;}
 
 .modal-title__controlname{
     font-size: 1.25rem;
@@ -460,6 +460,7 @@ template {
     left: 80px;
     right: 364px;
     top: 109px;
+    margin-bottom: 10px;
     border: 1px solid #4747D5;
     box-sizing: border-box;
     bottom: -28px;
@@ -569,7 +570,7 @@ template {
   margin: 0px 1px 25px;} 
 
 .modal-body{
-  padding: 2.25rem 0.5rem;}
+  padding: 1rem 0.5rem 2.25rem;}
 
 #modal-content__codigogenerado{
   font-size: 80px;}
@@ -583,7 +584,7 @@ template {
     font-size: 18px;}
 
   .modal-body{
-    padding: 2.25rem 0.5rem;}
+    padding: 1rem 0.5rem 2.25rem;}
 
   .punto-marco {
     margin: 0px 1px 10px;}  
