camios ultimos de cristhian

--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -68,6 +68,7 @@
     height: 1.6rem
     background: linear-gradient(#141618 20%, transparent 20%, transparent 40%, #141618 40%, #141618 60%, transparent 60%, transparent 80%, #141618 80%)
     cursor: pointer
+    position: relative
   
 .teacherCourses__main-banner
     --padding: 2rem 1rem 3rem
