--- a/src/view/courses/CourseDetail/CourseDetail.sass
+++ b/src/view/courses/CourseDetail/CourseDetail.sass
@@ -68,5 +68,9 @@
 @media screen and (max-width: 960px)
     .teacherCourseNav
         position: absolute
-        width: 100%
-        height: 100%
+        width: 500px
+        height: 1800px
+        padding: 7px
+        margin: 10px
+        top: 42px
+
