--- a/src/view/classAndCourse/FormPostCourse.sass
+++ b/src/view/classAndCourse/FormPostCourse.sass
@@ -27,7 +27,7 @@
 .CT-detallesCurso
   margin: auto 10px
 .CT-message-error
-  background: red
+  background: #E91E63
   color: white
   font-weight: 300
   padding: 8px 5px 5px 5px
