--- a/src/view/courses/cardCourses.sass
+++ b/src/view/courses/cardCourses.sass
@@ -44,6 +44,7 @@
         &__content 
             margin-top: 190px
             opacity: 0
+            word-wrap: break-word
             animation: ContentFadeIn .5s 1.1s forwards
         &__svg 
             position: absolute
