--- a/src/index.css
+++ b/src/index.css
@@ -588,9 +588,9 @@ template {
   .punto-marco {
     margin: 0px 1px 10px;}  
 }
-@media screen and (max-height:630px){
+/* @media screen and (max-height:630px){
   .modal-body{
-    /*height: 450px;*/
-    /* overflow: auto; */
+    /*height: 450px;
+    /* overflow: auto; 
   }
-}
+} */
