conflictos de estilos

--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -34,6 +34,7 @@
     list-style: none
 
 .teacherCourses__main-menu__item
+    padding: 1rem
     cursor: pointer
     &:hover
         background-color: #ffffff
@@ -45,8 +46,8 @@
 .teacherCourses__main-menu__addCourse,
 .teacherCourses__main-menu__LogOut
     color: #ffffff
+    margin-left: 1rem
     text-decoration: none
-    padding: 1rem
     
 .teacherCourses__main-nav
     position: fixed
@@ -67,7 +68,6 @@
     height: 1.6rem
     background: linear-gradient(#141618 20%, transparent 20%, transparent 40%, #141618 40%, #141618 60%, transparent 60%, transparent 80%, #141618 80%)
     cursor: pointer
-    position: relative
   
 .teacherCourses__main-banner
     --padding: 2rem 1rem 3rem
