--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -232,6 +232,7 @@
   font-size: 15px
   font-weight: 500
   line-height: 40px
+  text-decoration: none
   letter-spacing: 0.21px
   border: #4285f4 1px solid
   border-radius: 100px
