--- a/src/index.css
+++ b/src/index.css
@@ -367,8 +367,6 @@ template {
 [hidden] {
   display: none;
 }
-
-
 /* en esta seccion van a estar los estilos del modal */
 
 /* .modal-teacher__container */
@@ -377,19 +375,81 @@ template {
   .modal-teacher__container-header-close
   .modal-teacher__container-body-input-text1
   .modal-teacher__container-body-input-text1
-
   .modal-teacher__container-body-input-text1
-
-
-
 */
-
 .modal-teacher__general{
-    position: relative;
-    pointer-events: auto;
-    border-radius: 20px;
-    transform: none !important;
-  }
+  position: relative;
+  pointer-events: auto;
+  border-radius: 20px;
+  transform: none !important}
+
+/* .modal-background__general{
+  display:table-cell;
+  background:rgba(0,0,0,.8);
+  text-align:center;
+  vertical-align:middle}
+
+.modal-content__general{
+  background:white;
+  padding:50px;
+  display:inline-block;
+  border-radius:3px;
+  font-weight:300;
+  position:relative} */
+
+/* .modal-svg {
+  position:absolute;
+  top:0;
+  left:0;
+  height:100%;
+  width:100%;
+  border-radius:3px}
+
+.modal-svg rect {
+  stroke: #fff;
+  stroke-width: 2px;
+  stroke-dasharray: 778;
+  stroke-dashoffset: 778}
+
+.six {
+  transform:scale(1)}
+
+.six .modal-background__general{
+  background:rgba(0,0,0,.0);
+  animation: fadeIn .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+.six .modal-background__general .modal-content__general{
+  background-color:transparent;
+  animation: modalFadeIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+.six .modal-background__general .modal-content__general .modal-header,
+.six .modal-background__general .modal-content__general .modal-body {
+  opacity:0;
+  position:relative;
+  animation: modalContentFadeIn .5s 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;}
+
+.six .modal-background__general .modal-content__general .modal-svg rect{
+  animation: sketchIn .5s .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+.out{
+  animation: quickScaleDown 0s .5s linear forwards}
+
+.out .modal-background__general {
+  animation: fadeOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;}
+
+.out .modal-background__general .modal-content__general{
+  animation: modalFadeOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+
+.out .modal-background__general .modal-content__general .modal-header,
+.out .modal-background__general .modal-content__general .modal-body {
+  animation: modalContentFadeOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+}
+.out .modal-background__general .modal-content__general .modal-svg rect {
+  animation: sketchOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;} */
 
 .modal-header{
     font-size: 26px;
@@ -561,18 +621,76 @@ template {
   letter-spacing: .02em
 }
 
+@keyframes fadeIn {
+  0% {
+    background:rgba(0,0,0,.0);
+  }
+  100% {
+    background:rgba(0,0,0,.7);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    background:rgba(0,0,0,.7);
+  }
+  100% {
+    background:rgba(0,0,0,.0);
+  }
+}
+@keyframes modalFadeIn {
+  0% {
+    background-color:transparent;
+  }
+  100% {
+    background-color:white;
+  }
+}
+
+@keyframes modalFadeOut {
+  0% {
+    background-color:white;
+  }
+  100% {
+    background-color:transparent;
+  }
+}
+
+@keyframes sketchOut {
+	0% {
+		stroke-dashoffset: 0;
+	}
+	100% {
+		stroke-dashoffset: 778;
+	}
+}
+
+@keyframes quickScaleDown {
+  0% {
+    transform:scale(1);
+  }
+  99.9% {
+    transform:scale(1);
+  }
+  100% {
+    transform:scale(0);
+  }
+}
 @media screen and (max-width:800px){
 .modal-content {
   width: 360px
 }
 .modal-body .punto-marco {
-  margin: 0px 1px 25px;} 
+  margin: 0 1px 25px;} 
 
 .modal-body{
-  padding: 2.25rem 0.5rem;}
+  padding: 1rem 0.5rem 2.25rem;}
 
 #modal-content__codigogenerado{
   font-size: 80px;}
+}
+.list-grade{
+  width: 50%
 }
 
 @media screen and (max-width:500px){
@@ -587,10 +705,4 @@ template {
 
   .punto-marco {
     margin: 0px 1px 10px;}  
-}
-@media screen and (max-height:630px){
-  .modal-body{
-    /*height: 450px;*/
-    /* overflow: auto; */
-  }
 }
