warning en consola generales

--- a/src/components/student/temporizador/temporizador.sass
+++ b/src/components/student/temporizador/temporizador.sass
@@ -44,13 +44,15 @@
       box-shadow: none
       pointer-events: none
   .pure-button-primary
-    background-color: #0078e7
+    background-color: #1c59aa
+    font-family: Opal
 .temporizador
   .unit_value
     font-family: clockicons !important
     color: #000
   .pure-button-success
-    background-color: #00c851
+    background-color: #52be7f;
+    font-family: Opal;
 @media only screen and (max-width: 469px)
   .temporizador
     .unit_value
