--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -454,7 +454,7 @@
         border-radius: 3px
         z-index: 1
         rect 
-          stroke: red
+          stroke: white
           width: 100%
           height: 100%
           stroke-width:  2px
