--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -444,6 +444,8 @@
         line-height: 25px
         .modal-general_container_body
             margin-top: 20px
+        .codigogenerado
+            margin-top: 65px
       
       .modal-general_svg 
         position: absolute
