--- a/src/components/teacher/footer/boton.css
+++ b/src/components/teacher/footer/boton.css
@@ -2,7 +2,7 @@
 .btnNextPrev
 {
     position: absolute;
-    top: 50%;
+    top: 93%;
     left: 50%;
     transform:translate(-50%, -50%);
     margin: 0;
@@ -10,9 +10,9 @@
     display: flex;
 }
 
-.prev{
+/* .prev{
     transform: translate(-473px, 0%)
-}
+} */
 
 
 .btnNextPrev li 
@@ -41,7 +41,7 @@
 .btnNextPrev li.next span
 {
     top: 50%;
-    right: 32%;
+    right: 20%;
     transform: translateY(-45%) rotate(-45deg);
     border-left: none;
     border-top: none;
@@ -75,16 +75,15 @@
 .btnNextPrev li.prev span
 {
     top: 50%;
-    /*left: 20%;*/
+    left: 23%;
     transform: translateY(-50%) rotate(-45deg);
     border-right: none;
     border-bottom: none;
-    left: 39%;
 }
 
-.next{
+/* .next{
     transform: translate(475px, 0%);
-}
+} */
 
 
 .btnNextPrev li.prev:hover span
@@ -110,3 +109,9 @@
     transform: rotate(45deg) translate(-2px,-1px) scaleX(1);
 
 }
+
+@media (max-width: 880px){
+   
+    }
+
+
