--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -3,7 +3,7 @@
     color: white
     display: flex
     text-align: center
-    div
+    .footer-div
         flex-grow: 1
         display: flex
         cursor: pointer
