--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -95,6 +95,7 @@ iframe
     visibility: visible
 
 .popup 
+    position: relative
     background: #F8F8F8
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3)
     border-radius: 10px
