--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -106,7 +106,7 @@
         display: flex
     .teacherCourses__main-menu__item
         padding: 0
-        transition: transform .3s
+        // transition: transform .3s
     .teacherCourses__main-menu__addCourse
         // color: #53575A
         text-decoration: none
@@ -145,8 +145,8 @@
         --logo-height: 5rem 
     .teacherCourses__main-menu__item:hover
         background-color: transparent
-        -webkit-transform: scale(1.1)
-        transform: scale(1.1)
+        // -webkit-transform: scale(1.1)
+        // transform: scale(1.1)
         & .teacherCourses__main-menu__LogOut
             color: white
             background-color: #ff0055
