--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -106,9 +106,10 @@
         display: flex
     .teacherCourses__main-menu__item
         padding: 0
-        // transition: transform .3s
+        transition: transform .3s
     .teacherCourses__main-menu__addCourse
         // color: #53575A
+        transition: transform .3s
         text-decoration: none
         font-size: 1em
         padding: 0.5rem
@@ -118,6 +119,7 @@
         
     .teacherCourses__main-menu__LogOut
         // color: #53575A
+        transition: transform .3s
         text-decoration: none
         font-size: 1em
         padding: 0.5rem
@@ -125,6 +127,7 @@
         background-color: #E91E63
         color: white
     .teacherCourses__main-menu__returnCourse
+        transition: transform .3s
         text-decoration: none
         font-size: 1em
         padding: 0.5rem
@@ -145,17 +148,21 @@
         --logo-height: 5rem 
     .teacherCourses__main-menu__item:hover
         background-color: transparent
-        // -webkit-transform: scale(1.1)
-        // transform: scale(1.1)
         & .teacherCourses__main-menu__LogOut
             color: white
+            -webkit-transform: scale(1.1)
+            transform: scale(1.1)
             background-color: #ff0055
         & .teacherCourses__main-menu__addCourse
             background-color: #ff9900
+            -webkit-transform: scale(1.1)
+            transform: scale(1.1)
             color: white
         & .teacherCourses__main-menu__returnCourse
             background-color: #0cd660
             color: white
+            -webkit-transform: scale(1.1)
+            transform: scale(1.1)
 
 .courseTeacher-container
     display: flex
