--- a/src/view/classAndCourse/FormPostCourse.sass
+++ b/src/view/classAndCourse/FormPostCourse.sass
@@ -1,3 +1,11 @@
+//Caja Principal ContenedorNivel
+.CT-contenedorNivel
+  border: solid 1px #4747D5
+  margin: 20px 10px
+  border-radius: 0px
+  overflow: hidden
+  
+// Input de Radio
 .CT-opcionNivel
   position: absolute
   visibility: hidden
@@ -18,14 +26,12 @@
 .CT-labelNivel + .CT-opcionNivel + .CT-labelNivel
   border-left: solid 1px #4747D5
 
-.CT-contenedorNivel
-  border: solid 1px #4747D5
-  margin: 20px 10px
-  border-radius: 0px
-  overflow: hidden
 
+//Caja Detalle Curso
 .CT-detallesCurso
   margin: auto 10px
+
+//Caja Message
 .CT-message-error
   background: #E91E63
   color: white
