Comentacion de Codigo Grupos.sass

--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -1,4 +1,4 @@
-
+// Cuerpos de Grupos
 .cuerpo-grupos
     text-align: center
     margin-top: 25px
@@ -25,7 +25,7 @@
     span
         font-size: 23px
 
-
+// Input de text
 .input-text
     border: 2px solid rgb(0, 140, 186)
     font-size: 1.75em
@@ -38,6 +38,8 @@
         outline: none
         color: black
 
+
+// Contenedores de Grupos
 .grupos-cards
     display: flex
     flex-wrap: wrap
