--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -85,6 +85,8 @@
     line-height: 1.5
     margin-bottom: 1.25rem
 
+
+// Responsive 
 @media (max-width: 56rem)
     .grupos-cards__item
         width: 50%
@@ -92,6 +94,7 @@
     .grupos-cards__item
         width: 100%
 
+// Contenedores Grupos 
 .contenedor-grupos
     color: #999999
     font-family: "Opal"
