--- a/src/components/teacher/lista/lista.sass
+++ b/src/components/teacher/lista/lista.sass
@@ -7,7 +7,7 @@
     cursor: pointer
     background-color: Transparent
     border: none
-    margin: 0px 10px 55px
+    margin: 0px 10px 40px
 
 .modal 
     position: fixed
@@ -148,11 +148,10 @@
     -webkit-border-radius: 200px 200px 200px 200px
 
 .punto-img 
-    left: 16px
-    top: 16px
-    position: static
-    width: 100%
-    height: 100%
+    width: 70px
+    top: -4px
+    left: 5px
+    position: absolute
     border-radius: 20%
 
 .punto-texto 
