--- a/src/components/teacher/loanding/spinner.css
+++ b/src/components/teacher/loanding/spinner.css
@@ -9,8 +9,9 @@
 }
 
 .spinner {
-    margin: 25% 50% ;
-    width: 70px;
+    top: 50%;
+    left: 50%;
+    position: absolute;
     text-align: center;
   }
   
