--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -34,25 +34,25 @@
             -webkit-transform: scale(1.20)
             transform: scale(1.20)
 
-// .btnMyM
-//     background-color: #3d8f2d
-//     color: white
-//     padding: 2px 10px
-//     cursor: pointer
-//     font-size: 20px
-//     border-radius: 5px
-//     margin: -2px 8px
-//     .button-zoom
-//         -webkit-transition: all .44s eases
-//         -moz-transition: all .4s ease
-//         -o-transition: all .4s ease
-//         -ms-transition: all .4s ease
-//         &:hover
-//             -webkit-transform: scale(1.25)
-//             -moz-transform: scale(1.25)
-//             -ms-transform: scale(1.25)
-//             -o-transform: scale(1.25)
-//             transform: scale(1.3)
+.btnMyM
+    background-color: #3d8f2d
+    color: white
+    padding: 2px 10px
+    cursor: pointer
+    font-size: 20px
+    border-radius: 5px
+    margin: -2px 8px
+    .button-zoom
+        -webkit-transition: all .44s eases
+        -moz-transition: all .4s ease
+        -o-transition: all .4s ease
+        -ms-transition: all .4s ease
+        &:hover
+            -webkit-transform: scale(1.25)
+            -moz-transform: scale(1.25)
+            -ms-transform: scale(1.25)
+            -o-transform: scale(1.25)
+            transform: scale(1.3)
 
 
 //boton
