agregando modals en editar curso 03/02

--- a/src/components/teacher/header/HeaderCode.sass
+++ b/src/components/teacher/header/HeaderCode.sass
@@ -43,9 +43,12 @@
         top: 5px
         margin: auto
         border-radius: 15px
+        .code
+            cursor: pointer
         .codigo-generado
             font-size: 1.4rem
             line-height: 1.2
+            cursor: pointer
     #menuToggle
         display: none
         position: absolute
