--- a/src/index.css
+++ b/src/index.css
@@ -406,7 +406,8 @@ template {
 }
 
 .modal-title{
-    letter-spacing: .01em}
+    letter-spacing: .01em;
+    font-size: 1.5rem;}
 
 .modal-teacher__general-close{
   float: right;
@@ -504,7 +505,6 @@ template {
     border: 0;
     color:#fff;
     font-size:20px;
-    cursor: pointer;
     margin: auto 10px;
     font-family: "Opal"}
 
