cambios de gerald

--- a/src/view/courses/CourseDetail/CourseDetail.sass
+++ b/src/view/courses/CourseDetail/CourseDetail.sass
@@ -74,3 +74,33 @@
         margin: 10px
         top: 42px
 
+// cambios para poner de gerald en css
+    
+    // css para clases     #e74c3c
+.courseTeacher-cards__nullCourses
+    color: #ffffff
+    padding: 0 1rem
+    // css para tabla de compentecias 
+
+.CourseDetail-table
+
+    border-radius: 16px
+    -moz-border-radius: 6px
+    margin: 3px
+    padding: 10px
+    background-color: #c6c5d4
+    >table
+        border-radius: 16px
+        -moz-border-radius: 6px
+        background-color: #ebebf1
+        border-collapse: collapse
+        border: 0px
+        >thead
+
+        >tbody
+
+            >th
+                padding: 16px
+                >tr:nth-child(even)
+                    background-color: #f2f2f2
+                    
