--- a/src/components/student/Header/HeaderContainer.sass
+++ b/src/components/student/Header/HeaderContainer.sass
@@ -4,15 +4,17 @@
     height: 66px
     width: 100%
     z-index: 3
+
     .alumnoHeader-logo
         float: left
         height: inherit
         margin-left: 1em
         /* border: 1px solid red; */
-    
+        
     .alumnoHeader-image
         margin: 18px 9px
 
+ 
     .alumnoHeader-menu-toggle
         display: none
 
@@ -28,19 +30,10 @@
             position: relative
             text-align: center
 
-            .alumnoHeader-a
-                padding: 10px
-                background: rgb(216, 216, 216)
-                color: #4d4d4d
-
-                &:hover
-                    background: -webkit-linear-gradient(left, #007bff, #5D00FF)
-                    padding: 20px
-
-                .fa
-                    font-size: 22px
-                    padding: 0 10px
-
+            &:hover .alumnoHeader-nav
+                display: block
+                padding: 5px
+                
             .alumnoHeader-nav
                 position: absolute
                 top: 65px
@@ -56,13 +49,40 @@
 
                     &:hover .alumnoHeader-a
                         background: rgb(194, 194, 194)
-                        color: red
+                        color: red;
                         transition: 0.5s
+
+                        .fas
+                            color: red
+                            transition: 0.5s
+                                            
+
+                    .alumnoHeader-a
+                        padding: 10px
+                        background: rgb(216, 216, 216)
+                        color: #4d4d4d
+                    
+            .alumnoHeader-a
+                display: block
+                padding: 21px
+                font-size: 1.1em
+
+                &:hover
+                    background: -webkit-linear-gradient(left, #007bff, #5D00FF)
+                     padding: 20px
+                    
+                .fa
+                    font-size: 22px
+                    padding: 0 10px
+
                         
-                    .fas
-                        color: red
-                        transition: 0.5s
-                
+.alumnoH-header-base
+    height: 66px
+    width: 100%
+
+
+.alumnoH-header *
+    color: white
 
 /* media queries */
 
@@ -75,6 +95,30 @@
             max-height: 0
             overflow: hidden
 
+            .alumnoHeader-li 
+                width: 100%
+                text-align: left
+                .alumnoHeader-nav 
+                    position: static
+                    display: block
+                    width: 100%
+                    background: -webkit-lisssnear-gradient(left, #5D00FF, #007bff)
+                   
+                    .alumnoHeader-li
+                        width: 100%
+                        text-align: left
+
+                        &:hover
+                            background: rgb(194, 194, 194)
+                            color: red
+                            transition: 0.5s
+                    
+
+                        .alumnoHeader-a
+                            padding: 10px
+                            background: -webkit-linear-gradient(left, #5D00FF, #007bff)
+                            color: white
+                            margin-left: 50px
         
         .alumnoHeader-menu-toggle
             position: absolute
@@ -89,41 +133,6 @@
         max-height: 100em !important
     
 
-    .alumnoH-header
-    .alumnoHeader-nav 
-        .alumnoHeader-li, .alumnoH-header .alumnoHeader-nav .alumnoHeader-li .alumnoHeader-nav .alumnoHeader-li
-        width: 100%
-        text-align: left
-    
-
-    .alumnoH-header 
-        .alumnoHeader-nav 
-            .alumnoHeader-li 
-                .alumnoHeader-nav
-                    position: static
-                    display: block
-                    width: 100%
-                    background: -webkit-linear-gradient(left, #5D00FF, #007bff)
-    
-    
-    .alumnoH-header 
-        .alumnoHeader-nav 
-            .alumnoHeader-li 
-                .alumnoHeader-nav 
-                    .alumnoHeader-li
-                         .alumnoHeader-a
-                            padding: 10px
-                            background: -webkit-linear-gradient(left, #5D00FF, #007bff)
-                            color: white
-                            margin-left: 50px
-                        
-    .alumnoH-header 
-        .alumnoHeader-nav 
-            .alumnoHeader-li 
-                .alumnoHeader-nav 
-                    .alumnoHeader-li:hover
-                        background: rgb(194, 194, 194)
-                        color: red
-                        transition: 0.5s
-                    
-
+    // .alumnoH-header
+    //     .alumnoHeader-nav 
+  
