--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -24,6 +24,7 @@
     background: #fff
     height: auto
     padding: 15px
+    position: fixed
     box-shadow: rgba(150, 150, 150, 0.5) 0px 2px 2px
     text-align: center
     .triviaStudent-title
@@ -76,7 +77,7 @@
     padding: 10px
     text-align: left
     min-width: 99%
-    position: relative;
+    position: relative
     text-decoration: none
     border: none
     word-wrap: break-word
@@ -89,7 +90,7 @@
             font-size: 25px
             margin: 20px 0 20px 80px
     .triviaStudentSimbol
-        width: 18%
+        width: 10%
         display: inline-block
         text-align: center
         position: absolute
