validacion por cada curso

--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -14,8 +14,13 @@
     font-family: 'Opal'
     text-align: center
 
+.triviaS-preheader
+    width: 100%
+    height: auto
+    min-height: 65px
+
 .header2
-    top: 0
+    top: 65px
     width: 100%
     display: flex
     flex-direction: column
