--- a/src/components/teacher/left/MenuLeft.sass
+++ b/src/components/teacher/left/MenuLeft.sass
@@ -18,6 +18,7 @@
         width: 170px
         left: -98px
         top: 35%
+        z-index: 3
         border-radius: 0px 100px 100px 0px
         -moz-border-radius: 0px 100px 100px 0px
         -webkit-border-radius: 0px 100px 100px 0px
@@ -28,17 +29,6 @@
         color: rgba(255, 255, 255, 0.548)
         margin-top: 80px
         margin-left: 75px
-
-    &pestaña
-        background: #3087a4c9
-        position: fixed
-        height: 210px
-        width: 170px
-        left: -98px
-        top: 35%
-        border-radius: 0px 100px 100px 0px
-        -moz-border-radius: 0px 100px 100px 0px
-        -webkit-border-radius: 0px 100px 100px 0px
         
 
     & ul
