--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -53,7 +53,7 @@
     text-decoration: none
     
 .teacherCourses__main-nav
-    position: absolute
+    position: fixed
     height: calc(100vh - 3rem)
     width: 50vw
     background: #141618
