--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -245,6 +245,7 @@
     width: 40px
     top: 8px
     left: 5px
+.courseTeacher__animationEdit
     animation: 1000ms ease 0s infinite normal none running ripple
 
 .courseTeacher__button-delette,
