--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -320,13 +320,13 @@
       left: 30px
 .loginTeacherHeader
   height: 51px
-  padding: 13px 10px 0
-  max-width: 227px
+  padding: 13px 19px 0
+  max-width: 255px
   .logoAcademy
     height: 51px
-    margin: 5px
-    background-image: url('../../img/Logo.svg') 
+    margin: 15px
+    background-image: url('../../img/LogoBlancoNegro.svg') 
     background-repeat: no-repeat
     &:hover
-      background-image: url('../../img/LogColor.svg') 
+      background-image: url('../../img/LogoColor.svg') 
       background-repeat: no-repeat
