--- a/src/components/teacher/footer/boton.css
+++ b/src/components/teacher/footer/boton.css
@@ -1,9 +1,9 @@
 /*  Clase Principal */
 .btnNextPrev
 {
-    position: relative;
+    position: absolute;
     width: 100%;
-    top: calc(50% - 80px);
+    top: calc(50% - 40px);
     left: 50%;
     transform:translate(-50%, -50%);
     margin: 0;
