cambios generales en 6 archivos

--- a/src/view/login/login.css
+++ b/src/view/login/login.css
@@ -91,7 +91,7 @@
   margin: 0 auto;
   width: 130px;
   color: #fff;
-  background-color: #ff73b3;
+  background-color:#52be7f;
   opacity: 1;
   -moz-transition: all 0.5s;
   -o-transition: all 0.5s;
