--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -4,7 +4,7 @@
   top: 0
   width: 100%
   height: 100%
-  font-family: Opal
+  font-family: opal
   background-image: url(./bg-teacher-login.jpg)
   background-color: #5356ad
   background-size: cover
@@ -92,7 +92,7 @@
     margin: 0 auto
     width: 130px
     color: #fff
-    background-color: #ff73b3
+    background-color: #52be7f
     opacity: 1
     -moz-transition: all 0.5s
     -o-transition: all 0.5s
@@ -155,11 +155,12 @@
     -o-transition: all 0.5s
     -webkit-transition: all 0.5s
     transition: all 0.5s
+    border-radius: 5%
     .loginTeacher-btn
       position: relative
-      box-shadow: 0 0 10px 1px #ff73b3
+      box-shadow: 0 0 10px 1px #52be7f
       margin-top: 30px
-      font-family: Opal
+      font-family: monoscape
       font-size: 15px
   .loginTeacher-form-item
     position: absolute
@@ -221,7 +222,7 @@
 
 .loginTeacher-button-google
   float: left
-  font-family: Opal
+  font-family: opal
   color: #ffffff !important
   background: #4285f4
   min-width: 90%
