--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Opal;
+  font-family: Opal,"monoscape";
   src: url("./plugins/Opal.ttf") format("truetype");
 }
 
@@ -183,7 +183,7 @@ textarea {
   font-size: 100%; /* 1 */
   line-height: 1.15; /* 1 */
   margin: 0; /* 2 */
-  font-family: opal !important;
+  font-family: monospace;
 }
 
 /**
@@ -449,7 +449,7 @@ template {
     border: 1px solid #4747D5;
     margin: auto auto 10px;
     resize: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace;
     padding: 10px 
     }
 
