--- a/src/components/teacher/trivia/trivia.sass
+++ b/src/components/teacher/trivia/trivia.sass
@@ -36,6 +36,7 @@
     outline: none !important
 
 
+
 .respuestas 
     background: #45a3e5
     &:hover 
@@ -162,82 +163,82 @@
 //  /* The Close Button */
 
 .close 
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+    color: #aaaaaa 
+    float: right 
+    font-size: 28px 
+    font-weight: bold 
 
 .close:hover,
 .close:focus
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+    color: #000 
+    text-decoration: none 
+    cursor: pointer 
 
 .rolldown-list
-    text-align: left;
-    padding: 0;
-    margin: 0;
+    text-align: left 
+    padding: 0 
+    margin: 0 
 
 .rolldown-list li 
-    padding: 12px;
-    margin-bottom: .125em;
-    display: block;
-    list-style: none;
-    font-weight: bold;
-    font-size: 20px;
-    text-transform: uppercase;
-    overflow: hidden;
-    margin-top: 10px;
-    visibility: hidden;
-    animation: rolldown .7s 1;
-    transform-origin: 50% 0;
-    animation-fill-mode: forwards;
+    padding: 12px 
+    margin-bottom: .125em 
+    display: block 
+    list-style: none 
+    font-weight: bold 
+    font-size: 20px 
+    text-transform: uppercase 
+    overflow: hidden 
+    margin-top: 10px 
+    visibility: hidden 
+    animation: rolldown .7s 1 
+    transform-origin: 50% 0 
+    animation-fill-mode: forwards 
 
 
 .rolldown-list li:nth-child(2n) 
-    background-color: #444;
+    background-color: #444 
 
 
 .rolldown-list li:nth-child(2n+1) 
-    background-color: #333;
+    background-color: #333 
 
 
 .rolldown-list li:nth-child(2n+1) 
-    animation-delay: 0.25s;
-    -webkit-animation-delay: 0.25s !important;
+    animation-delay: 0.25s 
+    -webkit-animation-delay: 0.25s !important 
 
 .rolldown-list li:nth-child(2n+2) 
-    animation-delay: 0.50s;
-    -webkit-animation-delay: 0.50s !important;
+    animation-delay: 0.50s 
+    -webkit-animation-delay: 0.50s !important 
 
 .rolldown-list li:nth-child(2n+3) 
-    animation-delay: 4s;
-    -webkit-animation-delay: 0.75s !important;
+    animation-delay: 4s 
+    -webkit-animation-delay: 0.75s !important 
 
 .rolldown-list li:nth-child(2n+4) 
-    animation-delay: 4s;
-    -webkit-animation-delay: 1s !important;
+    animation-delay: 4s 
+    -webkit-animation-delay: 1s !important 
 
 .rolldown-list li:nth-child(2n+5) 
-    animation-delay: 4s;
-    -webkit-animation-delay: 1.25s !important;
+    animation-delay: 4s 
+    -webkit-animation-delay: 1.25s !important 
 
 
 #myList 
-    position: absolute;
-    width: 50%;
-    left: 50%;
-    margin-left: -25%;
+    position: absolute 
+    width: 50% 
+    left: 50% 
+    margin-left: -25% 
 
 
 @keyframes rolldown 
     0% 
-        visibility: visible;
-        transform: rotateX(180deg) perspective(500px);
+        visibility: visible 
+        transform: rotateX(180deg) perspective(500px) 
     70%
-        visibility: visible;
-        transform: rotateX(-20deg);
+        visibility: visible 
+        transform: rotateX(-20deg) 
     100% 
-        visibility: visible;
-        transform: rotateX(0deg);
+        visibility: visible 
+        transform: rotateX(0deg) 
     
