cambios para pasar las compentencias

--- a/src/view/courses/CourseDetail/CourseDetail.sass
+++ b/src/view/courses/CourseDetail/CourseDetail.sass
@@ -21,9 +21,9 @@
             color: #000000
             border-top: 1px solid #ddd
             border-bottom: 1px solid #ddd
-            background-color: #f5f9fc
+            background-color: #ddd
         &:nth-child(odd):not(:first-child)
-            background-color: #ebf3f9
+            background-color: rgb(199, 211, 220)
     .CourseDetail__table-th
         display: none
 
