cambios de detalle

--- a/src/view/courses/CourseDetail/CourseDetail.sass
+++ b/src/view/courses/CourseDetail/CourseDetail.sass
@@ -26,7 +26,6 @@
             background-color: rgb(199, 211, 220)
     .CourseDetail__table-th
         display: none
-
     .CourseDetail__table-td
         display: block
         &:first-child
@@ -58,9 +57,7 @@
             display: table-cell
             padding: 1em
         .CourseDetail__table-th:first-child, .CourseDetail__table-td:first-child
-            padding-left: 0
-        .CourseDetail__table-th:last-child, .CourseDetail__table-td:last-child
-            padding-right: 0
+            text-align: center
 // .teacherCourseNav
 //     width: 100%
 //     height: 1800px
@@ -96,9 +93,7 @@
         border-collapse: collapse
         border: 0px
         >thead
-
         >tbody
-
             >th
                 padding: 16px
                 >tr:nth-child(even)
