--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -74,6 +74,9 @@
     align-items: center
     height: 300px
     margin: 12px auto auto auto
+    #pre-imagen
+        width: 500px
+        min-width: 200px
 
 .trivia-student-button
     color: #fff
