--- a/src/view/courses/CourseDetail/CourseDetail.sass
+++ b/src/view/courses/CourseDetail/CourseDetail.sass
@@ -46,6 +46,8 @@
 @media screen and (max-width: 601px)
     .CourseDetail__table .CourseDetail__table-tr:nth-child(2)
         border-top: none
+    .CourseDetail__Container
+            padding: 0
 
 @media screen and (min-width: 600px)
     .CourseDetail__table
