--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -159,8 +159,8 @@
 
 .courseTeacher-container
     display: flex
-    align-items: center;
-    justify-content: center;
+    align-items: center
+    justify-content: center
     -webkit-display: box
     -moz-display: box
     -ms-display: flexbox
@@ -172,8 +172,8 @@
   
 .courseTeacher-cards
     display: flex
-    align-items: center;
-    justify-content: center;
+    align-items: center
+    justify-content: center
     margin: 1rem
     list-style: none
     height: 410px
@@ -225,14 +225,7 @@
         border-radius: 6px 6px 0px 0px
         opacity: 0.91
         background-image: url('https://www.petdarling.com/articulos/wp-content/uploads/2016/04/nombres-de-gatos.jpg')
-
-// @media (min-width: 640px)
-//     .courseTeacher-cards 
-//         width: 45%
-    // .CourseTeacher-main
-    //     height: 100% !important
  
-  
 @media (min-width: 896px)
     .courseTeacher-cards 
         width: 290px
@@ -565,5 +558,4 @@
   100% 
     opacity: 0
     top: -20px
-  
 
