--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -1,4 +1,33 @@
 
+.teacherCourses__floatingActionButton
+    position: fixed
+    border-radius: 50%
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 6px 10px 0 #666
+    transition: all 0.1s ease-in-out
+    &:hover
+        box-shadow: 0 6px 14px 0 #666
+        transform: scale(1.05)
+    .fas
+        color: #ffffff
+        margin-left: 2px
+.teacherCourses_editStudent
+    background: #FB9600
+    bottom: 18%
+    right: 6%
+    height: 60px
+    width: 60px
+    font-size: 22px
+.teacherCourses_addStudent
+    background: #52BE7F
+    bottom: 6%
+    right: 6%
+    height: 60px
+    width: 60px
+    font-size: 24px
+
 .teacherCourses__l-container
     max-width: 100%
     padding-left: 1rem
