--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -20,6 +20,7 @@
     height: 60px
     width: 60px
     font-size: 22px
+    z-index: 2
 .teacherCourses_addStudent
     background: #52BE7F
     bottom: 6%
@@ -27,6 +28,7 @@
     height: 60px
     width: 60px
     font-size: 24px
+    z-index: 2
 
 .teacherCourses__l-container
     max-width: 100%
