--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -129,6 +129,9 @@
 .teacherCourses__small
     font-size: .75rem
 
+@media (max-width: 525px)
+    .modal-general_bg_content
+        width: 95% !important
 
 @media screen and (min-width: 960px)
     .teacherCourses__main-menu
@@ -471,6 +474,7 @@
     .modal-general_bg_content
       background: white
       padding: 30px
+      min-width: 300px
       width: 500px
       display: inline-block
       position: relative
