--- a/src/components/teacher/loanding/spinner.css
+++ b/src/components/teacher/loanding/spinner.css
@@ -9,8 +9,8 @@
 }
 
 .spinner {
-    top: 50%;
-    left: 50%;
+    top: calc(50% - 12px);
+    left: calc(50% - 34px);
     position: absolute;
     text-align: center;
   }
