--- a/src/view/courses/CourseDetail/CourseDetail.sass
+++ b/src/view/courses/CourseDetail/CourseDetail.sass
@@ -43,6 +43,23 @@
         padding: .5em 1em
     .CourseDetail__table-tr
         border-color: #bfbfbf
+    .courseTeacher__button-alumno
+        background-color: #FB9600
+        min-width: 30px
+        max-width: 40px
+        border: 0
+        height: 30px
+        // display: block
+        margin: .1em
+        border-radius: 5px
+        color:#fff
+        // vertical-align: middle
+        // position: relative
+        z-index: 1
+        width: 100%
+        cursor: pointer
+        float: right
+        
 @media screen and (max-width: 601px)
     .CourseDetail__table .CourseDetail__table-tr:nth-child(2)
         border-top: none
