--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -109,6 +109,7 @@
     box-sizing: content-box
     border: none
     display: block
+    font-family: monospace
     width: 220px
     font-size: 14px
     -moz-transition: all 0.3s
@@ -160,7 +161,7 @@
       position: relative
       box-shadow: 0 0 10px 1px #52be7f
       margin-top: 30px
-      font-family: monoscape
+      font-family: Opal
       font-size: 15px
   .loginTeacher-form-item
     position: absolute
