--- a/src/index.css
+++ b/src/index.css
@@ -441,7 +441,7 @@ template {
     margin: 0;
     line-height: 1.4;
     letter-spacing: .02em;
-    font-family: monospace;
+    font-family: "Opal";
   }
 
 .modal-body .modal-title__controldescription{
