--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -305,10 +305,10 @@
 
 #myList {
     margin-top: 1%;
-    position: absolute;
+    /* position: absolute;
     width: 50%;
     left: 50%;
-    margin-left: -25%;
+    margin-left: -25%; */
 }
 
 h3.trivia-respuestas{
