--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -101,8 +101,10 @@ iframe
     justify-content: center
     display: flex
     visibility: hidden
+    z-index: 2
     .active 
         visibility: visible
+        // z-index: 5
 
 //popup Diapositiva
 .popup 
