--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -98,8 +98,7 @@
 }
 
 .modal-general_closeTrivia{
-    position: absolute;
-    right: 189px;
+    position: static;
     background-color: #E91E63;
     max-width: 40px;
     border: 0;
@@ -108,6 +107,7 @@
     border-radius: 5px;
     z-index: 3;
     width: 100%;
+    float: right;
     cursor: pointer}
 
 .modal-general_closeTrivia:hover .button-zoom{
