--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -207,3 +207,13 @@ iframe
         background: #F8F8F8
         width: 70%
         min-height: 85%
+.slider 
+    &.animated
+    pointer-events: none !important
+.control-arrow
+    // cursor: pointer
+    background-color: blue !important
+    &.control-next
+        // background-color: yellow !important
+    &.control-prev
+        // background-color: blue !important
