--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -52,7 +52,6 @@
     .grupos-cards__item
         display: flex
         padding: 1rem
-        width: 33.33%
         .grupos-card
             background: white
             border-radius: 0.25rem
@@ -83,6 +82,13 @@
                     margin-bottom: 1.25rem
 
 // Responsive 
+    
+@media (max-width: 200rem)
+    .grupos-cards__item
+        width: 15%
+@media (max-width: 100rem)
+    .grupos-cards__item
+        width: 33.33%
 @media (max-width: 56rem)
     .grupos-cards__item
         width: 50%
