lourdes trika forever

--- a/src/view/login.Stud/loginStu.sass
+++ b/src/view/login.Stud/loginStu.sass
@@ -205,9 +205,9 @@ input:-ms-input-placeholder
 .wrap-login100-form-btn:hover .login100-form-bgbtn
     left: 0
 
-@media (max-width: 576px)
+@media (max-width: 450px)
     .wrap-login100
-        width: 370px
+        width: 95%
         background: #fff
         border-radius: 10px
         overflow: hidden
