modificacion de css

--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -419,6 +419,8 @@
         .modal-general_close
           opacity: 0
           animation:  modalContentFadeIn .5s 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards
+          .button-zoom
+              width: 17px
         .modal-general_container 
           opacity: 0
           position: relative
@@ -569,3 +571,16 @@
     top: -20px
   
 
+
+
+.btnClose01
+    .bar-right
+        height: 10px
+        background: red
+        width: 100px
+        transform: rotate(-55deg)
+    .bar-left
+        height: 10px
+        width: 100px
+        background: blue
+        transform: rotate(40deg)
