--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,10 @@ img {
   border-style: none;
 }
 
+.modal-general-background .modal-general_bg_content .modal-general_close .button-zoom{
+  width: 17px !important
+}
+
 /* Forms
    ========================================================================== */
 
@@ -244,7 +248,7 @@ button:-moz-focusring,
 
 /* solo para contraseñas */
 input[type="text"], input[type="password"] {
-  font-family: monospace !important;
+  font-family: Opal;
 }
 /**
  * Correct the padding in Firefox.
@@ -427,6 +431,9 @@ template {
   z-index: 1;
   width: 100%;
   cursor: pointer;
+}
+.modal-teacher__general-close .button-zoom{
+  width: 17px;
 }
 
 .modal-teacher__general-controlname{
