--- a/src/view/classAndCourse/FormPostCourse.sass
+++ b/src/view/classAndCourse/FormPostCourse.sass
@@ -40,3 +40,20 @@
   padding: 8px 5px 5px 5px
   margin-block-start: 0.6em
   margin-block-end: 0.3em
+
+.select002
+  text-align: left
+  display: block
+  width: 60%
+  padding-left: 0
+  margin: 0 auto
+  label
+    box-sizing: border-box
+    display: inline-block
+    width: 20%
+  select
+    box-sizing: border-box
+    width: 70%
+    display: inline-block
+
+
