cambios de compentencias

--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -65,7 +65,7 @@
     list-style: none
 
 .teacherCourses__main-menu__item
-    padding: 1rem
+    // padding: 1rem
     cursor: pointer
     &:hover
         background-color: #ffffff
@@ -82,6 +82,7 @@
     color: #ffffff
     margin-left: 1rem
     text-decoration: none
+    padding: 1rem
     
 .teacherCourses__main-nav
     position: fixed
