--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -4,6 +4,8 @@
     text-align: center
 }
 .triviaT-topnav {
+    position: fixed;
+    width: 100%;
     overflow: hidden;
     background-color: #333;
     margin-bottom: 10px;
@@ -131,7 +133,7 @@
 /* media querie con hamburguesa */
 @media only screen and (max-width: 575px) {
     
-  .triviaT-topnav.responsive {position: relative;}
+  .triviaT-topnav.responsive {position: fixed;}
   .triviaT-topnav.responsive .triviaT-icon {
     position: absolute;
     right: 0;
@@ -153,6 +155,9 @@
 
 
 /* Contenido o cuerpo */
+.triviaT-cuerpo{
+    padding: 90px 0 0 0;
+}
 
 /* estilos grid de row and column */
 .triviaT-row:after {
