--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -151,8 +151,9 @@
     padding-bottom: 1em
 
 .input__field--kozakura
-    padding: .25em .5em
-    margin-top: 2.25em
+    padding: 0 .5em
+    margin-top: 1.25em
+    height: 55px
     width: 100%
     background: transparent
     text-transform: uppercase
@@ -188,7 +189,7 @@
 
 .input__label--kozakura
     width: 100%
-    text-align: left
+    text-align: center
     position: absolute
     pointer-events: none
     overflow: hidden
