--- a/src/components/teacher/left/MenuLeft.sass
+++ b/src/components/teacher/left/MenuLeft.sass
@@ -18,7 +18,7 @@
         width: 170px
         left: -98px
         top: 35%
-        z-index: 3
+        // z-index: 3
         border-radius: 0px 100px 100px 0px
         -moz-border-radius: 0px 100px 100px 0px
         -webkit-border-radius: 0px 100px 100px 0px
