cambios de mirian en password

--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -219,7 +219,7 @@
       height: 0%
       opacity: 0
 
-/* Boton logeo con Google
+//  Boton logeo con Google
 
 .loginTeacher-button-google
   float: left
@@ -256,7 +256,7 @@
   -webkit-transform: rotate(360deg)
   transform: rotate(360deg)
 
-/* linea intermedia entre login normal y login con google
+//  linea intermedia entre login normal y login con google
 
 .linea
   margin: 0 auto 15px
@@ -271,7 +271,7 @@
   font-size: 12px
   float: left
 
-/* loading
+//  loading
 
 .login-loading
   margin-left: 45%
@@ -298,7 +298,7 @@
   padding: 10px
   font-size: 15px
 
-/* Media queries a partir de 600 px
+//  Media queries a partir de 600 px
 
 @media (max-width: 600px)
   .loginTeacher-login-register
@@ -332,3 +332,18 @@
     &:hover
       background-image: url('../../img/LogoColor.svg') 
       background-repeat: no-repeat
+.resetPassword 
+  margin-top: 1.7rem
+  font-size: 15px
+  float: left
+  width: 100%
+  text-align: center
+// estilos para ver contraseña
+.pt-input-group 
+  display: block
+  position: relative
+  margin-bottom: 15px
+  & .pt-input
+    position: relative
+
+
