--- a/src/components/student/trivia/Trivia.sass
+++ b/src/components/student/trivia/Trivia.sass
@@ -32,6 +32,7 @@
     position: fixed
     box-shadow: rgba(150, 150, 150, 0.5) 0px 2px 2px
     text-align: center
+    z-index: 2
     .triviaStudent-title
         margin: 0
 
@@ -45,6 +46,8 @@
     font-size: 1.7em
     padding: 10px
     display: inline-flex
+    position: relative
+    top: -145px
     .contador
         background: #A647FA
         padding: 30px
@@ -71,12 +74,13 @@
     min-width: 200px
     display: inline-flex
     justify-content: center
-    align-items: center
-    height: 300px
+    // align-items: center
+    height: 320px
     margin: 12px auto auto auto
     #pre-imagen
-        width: 500px
-        min-width: 200px
+        width: 90%
+        min-width: 60%
+    
 
 .trivia-student-button
     color: #fff
@@ -223,13 +227,18 @@
                 margin: 20px 0
     .left
         height: 150px
+        top: 0
+        z-index: 1
     .right
         height: 200px
     .trivia-student-button img  
         width: 40px
 
-@media screen and (max-width: 600px)
+@media screen and (max-width: 800px)
     .trivia-student-center
         width: 100%
     .right
         display: none
+    .left
+        top: 0
+        z-index: 1
