--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -148,7 +148,7 @@
         font-size: 1em
         padding: 0.5rem
         border-radius: 39px
-        background-color: #eb8d00
+        background-color: #FB9600
         color: white
         
     .teacherCourses__main-menu__LogOut
@@ -164,7 +164,7 @@
         font-size: 1em
         padding: 0.5rem
         border-radius: 39px
-        background-color: #3aca76
+        background-color: #52BE7F
         color: white
     .teacherCourses__main-nav
         position: static
