--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -17,7 +17,7 @@
 
 //Boton video 
 .btnenviarvideo 
-    background-color: #3d8f2d
+    background-color: #52BE7F
     color: white
     padding: 2px 10px
     cursor: pointer
@@ -57,7 +57,7 @@
 
 //boton
 .Myni
-    background-color: #3d8f2d
+    background-color: #52BE7F
     color: white
     padding: 4px 10px
     cursor: pointer
