--- a/src/index.css
+++ b/src/index.css
@@ -555,7 +555,7 @@ template {
 }
 
 .list-course {
-  background-color: rgb(247, 166, 45);
+  background-color:#fb9600;
   width: 95%;
   padding: 2px;
   text-align-last: center;
